--- a/datazilla/webapp/static/css/homepage.css
+++ b/datazilla/webapp/static/css/homepage.css
@@ -7,18 +7,18 @@ body {
     min-width: 1120px;
 }
 div.hp-toppanel {
+    position:fixed;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     border: 0 solid #000;
-    background: -moz-linear-gradient(-90deg, #5CB2CB, #297E96);
-    background: -webkit-gradient(linear, left top, left bottom, from(#5CB2CB), to(#297E96));
-    height: 50px;
-    width: 1120px;
-    margin-top: 20px;
-    padding-top: 10px;
+    background: -moz-linear-gradient(-90deg, #225920, #44AA00);
+    background: -webkit-gradient(linear, left top, left bottom, from(#225920), to(#44AA00));
+    height: 30px;
+    width: 100%;
+    min-width: 1120px;
 }
 div.hp-title {
-  background: url("/static/images/title.png") no-repeat scroll 0 center transparent;
+  background: url("/static/images/title.png") no-repeat scroll 0 center;
   position: absolute;
   left: 15px;
   width:400px;
@@ -32,12 +32,24 @@ a {
 }
 
 div.hp-container {
+    position:fixed;
+    width:100%;
+    top:0;
+    z-index:10000;
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     border: 0 solid #000;
     width: 1120px;
-    padding-top: 10px;
+    background:white;
+    opacity:1;
+}
+div.hp-container-two {
     position: relative;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    border: 0 solid #000;
+    width: 1120px;
+    padding-top: 120px;
     margin-left: auto;
     margin-right: auto;
     background:white;
@@ -73,15 +85,69 @@ div.hp-list {
     background: white;
 }
 div.hp-control-container {
-    position:absolute;
-    width: 1120px;
-    height: 25px;
+    position:fixed;
+    width: 100%;
+    height: 30px;
     background: white;
-    top:10px;
+    top:35px;
+}
+div.hp-graph-control-container {
+    position:fixed;
+    width: 1118px;
+    height: 160px;
+    background: #F7F7F7;
+    bottom: 0px;
+    z-index:15000;
+    display:none;
+}
+div.hp-tip-control-panel {
+    position:absolute;
+    width: 1118px;
+    height: 20px;
+    background: #F7F7F7;
+    bottom:140px;
+    left:-1px;
+}
+div.hp-tip-panel {
+    float: left;
+    width:250px;
+    height: 140px;
+    overflow-y:auto;
+    background: #F7F7F7;
+    margin-left:10px;
+    margin-top: 23px;
+}
+div.hp-replicate-hover-panel {
+    position:absolute;
+    top:23px;
+    right:0px;
+    width:250px;
+    height: 140px;
+    overflow-y:auto;
+}
+.hp-hover-datum {
+    padding-top: 2px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+.hp-hover-inline-datum {
+    padding-top: 2px;
+    margin-left: 10px;
+    margin-right: 10px;
+    float:left;
+}
+.wordwrap {
+   white-space: pre-wrap;      /* CSS3 */
+   white-space: -moz-pre-wrap; /* Firefox */
+   white-space: -pre-wrap;     /* Opera <7 */
+   white-space: -o-pre-wrap;   /* Opera 7 */
+   word-wrap: break-word;      /* IE */
 }
 div.hp-control-element {
-    padding: 4px;
     float: left;
+    margin-left:10px;
+    margin-right:10px;
+    padding: 5px;
 }
 button:hover {
     cursor:pointer;
@@ -99,4 +165,17 @@ div.hp-line-graph-container {
 .hp-graph-name {
     position:absolute;
     top: -20px;
+}
+.hp-light-text {
+    opacity: 0.8;
+    filter: alpha(opacity=80);
+}
+.hp-vertical-text {
+    -webkit-transform:rotate(270deg);
+    -moz-transform:rotate(270deg);
+    -o-transform: rotate(270deg);
+    white-space:nowrap;
+    position:absolute;
+    left:135px;
+    margin-top:160px;
 }
