--- a/datazilla/webapp/templates/homepage.html
+++ b/datazilla/webapp/templates/homepage.html
@@ -25,7 +25,9 @@
             <a href=""><span id="logo"></span></a>
         </div>
     </div>
-    <div style="top:30px;" class="ui-widget ui-widget-header hp-control-container">
+    <div style="position:fixed; background:white; height:32px; top:29px; width:100%;" class="ui-widget ui-widget-header">
+
+    <div style="top:30px;" class="hp-control-container">
 
         <div style="display:inline;" class="hp-light-text">
             <div class="hp-control-element">
@@ -40,12 +42,23 @@
                 Product/Repository:
                 <select id="hp_repository"></select>
             </div>
+            <div class="hp-control-element">
+                Time Range:
+                <select id="hp_time_range">
+                    <option value="1">1 day</option>
+                    <option value="7">7 days</option>
+                    <option value="14">14 days</option>
+                    <option value="30">30 days</option>
+                    <option value="60">60 days</option>
+                </select>
+            </div>
 
-            <div class="hp-control-element" style="float:right;" title="Search a comma delimited list of revisions or machine names">
-                Revision/Machine:
+            <div class="hp-control-element" style="float:right;" title="Search a comma delimited list of revisions, machine names, or processor types (x86, x86_64)">
+                Search Graphs:
                 <input id="hp_input" type="text" size="40"></input>
             </div>
         </div>
+    </div>
     </div>
 </div>
 
@@ -55,9 +68,6 @@
     <div id="hp_tabs" style="margin-top:100px;">
         <ul>
             <li><a href="#hp-metrics">Metrics</a></li>
-            <li><a href="#hp-metrics">Machine Summary</a></li>
-            <li><a href="#hp-json">JSON Objects</a></li>
-            <li><a href="#hp-database">Database Summary</a></li>
         </ul>
         <div id="hp-metrics" style="height:1000px;">
 
@@ -79,8 +89,6 @@
             </div>
     
         </div>
-        <div id="hp-json"></div>
-        <div id="hp-database"></div>
     </div>
     <!--This div insures that the last graph is visible above the detail panel -->
     <div style="height:225px;"></div>
