--- a/datazilla/webapp/static/css/homepage.css
+++ b/datazilla/webapp/static/css/homepage.css
@@ -207,3 +207,9 @@ div.hp-replicate-spinner {
     background: transparent url(/static/images/spinner.gif) no-repeat center center;
     min-width: 550px;
 }
+div.hp-graph-container-controls {
+    float: right;
+}
+.hp-colorpicker-button {
+    font-size: 10px;
+}
