--- a/datazilla/webapp/templates/homepage.html
+++ b/datazilla/webapp/templates/homepage.html
@@ -71,7 +71,7 @@
 <div id="hp_container" style="display:none;" class="ui-widget ui-widget-header ui-corner-top hp-container-two hp-light-text">
 
     <div id="slider" class="ui-rangeSlider ui-dateRangeSlider hp-slider-container"></div>
-    <div style="margin-top:75px; float:left; width:100%; text-align:center;" class="hp-light-text">Hints: Click a data point to search by revision, hover over data to see details. Double click graph or use scrollwheel to zoom, click & drag graph to pan.</div>
+    <div style="margin-top:75px; float:left; width:100%; text-align:center;" class="hp-light-text">Hints: Click a data point to search by revision, hover over data to see details. Double click graph to zoom, click & drag graph to pan.</div>
     <div id="hp_tabs" style="margin-top:100px;">
         <ul>
             <li><a href="#hp-metrics">Metrics</a></li>
@@ -147,10 +147,11 @@
 <script type="text/javascript" src="/static/js/plugins/flot-0.7/jquery.flot.errorbars.js"></script>
 <!--
 The versions of jquery.event.drag-2.2.js and jquery.mousewheel.js that are embedded in jquery.flot.navigate.js
-do not work with the current version of jquery. To compensate, loading the required js modules separately
+do not work with the current version of jquery. To compensate, loading the required js modules separately. Disabling
+jquery.mouse.wheel.js entirely by not loading it and commenting it out in jquery.flot.navigate.js, the functionality
+is to disruptive with scrolling the page.
 -->
 <script type="text/javascript" src="/static/js/plugins/jquery.event.drag-2.2.js"></script>
-<script type="text/javascript" src="/static/js/plugins/jquery.mousewheel.js"></script>
 <script type="text/javascript" src="/static/js/plugins/flot-0.7/jquery.flot.navigate.js"></script>
 
 
