updated Bases.js path

--- a/datazilla/webapp/templates/apps.summary.html
+++ b/datazilla/webapp/templates/apps.summary.html
@@ -141,7 +141,7 @@
 <script type="text/javascript" src="/static/js/plugins/json2.js"></script>
 
 <!-- Metric summary classes -->
-<script type="text/javascript" src="/static/js/data_views/Bases.js"></script>
+<script type="text/javascript" src="/static/js/common/Bases.js"></script>
 <script type="text/javascript" src="/static/js/b2g_apps/AppsPage.js"></script>
 <script type="text/javascript" src="/static/js/b2g_apps/GraphControlsComponent.js"></script>
 <script type="text/javascript" src="/static/js/b2g_apps/PerformanceGraphComponent.js"></script>
