--- a/datazilla/webapp/templates/homepage.html
+++ b/datazilla/webapp/templates/homepage.html
@@ -161,7 +161,7 @@ is to disruptive with scrolling the page.
 <script type="text/javascript" src="/static/js/plugins/colorpicker/jquery.colorpicker.js"></script>
 
 <!-- Homepage classes -->
-<script type="text/javascript" src="/static/js/data_views/Bases.js"></script>
+<script type="text/javascript" src="/static/js/common/Bases.js"></script>
 <script type="text/javascript" src="/static/js/homepage/SelectionState.js"></script>
 <script type="text/javascript" src="/static/js/homepage/HomePage.js"></script>
 <script type="text/javascript" src="/static/js/homepage/SliderComponent.js"></script>
