--- a/datazilla/webapp/templates/metrics.summary.html
+++ b/datazilla/webapp/templates/metrics.summary.html
@@ -193,7 +193,7 @@
 <script type="text/javascript" src="/static/js/plugins/justgage.1.0.1.min.js"></script>
 
 <!-- Metric summary classes -->
-<script type="text/javascript" src="/static/js/data_views/Bases.js"></script>
+<script type="text/javascript" src="/static/js/common/Bases.js"></script>
 <script type="text/javascript" src="/static/js/metric_summary/MetricSummaryPage.js"></script>
 <script type="text/javascript" src="/static/js/metric_summary/MetricDashboardComponent.js"></script>
 <script type="text/javascript" src="/static/js/metric_summary/MetricGridComponent.js"></script>
