--- a/datazilla/webapp/templates/apps.summary.html
+++ b/datazilla/webapp/templates/apps.summary.html
@@ -116,7 +116,7 @@
                 <div style="width:120px;" class="app-control-element app-control-small-element">Replicate:<span id="app_replicate_x" class="app-data"></span></div>
                 <div style="width:150px;" class="app-control-element app-control-small-element">Run Time:<span id="app_replicate_y" class="app-data"></span></div>
             </div>
-            <div id="app_replicate_build_data" class="ui-widget ui-widget-header ui-corner-all app-detail-graph-container app-replicate-graph-detail" style="width:300px; height:305px; top:105px; left:648px;">
+            <div id="app_replicate_build_data" class="ui-widget ui-widget-header ui-corner-all app-detail-graph-container app-replicate-graph-detail" style="width:300px; height:305px; top:105px; left:648px; overflow-y:scroll; overflow-x:hidden;">
             </div>
         </div>
    </div>
