Add the median to the hover panel data display

--- a/datazilla/webapp/templates/apps.summary.html
+++ b/datazilla/webapp/templates/apps.summary.html
@@ -92,6 +92,7 @@
                 <div style="width:185px;" class="app-control-element app-control-small-element">Gaia Revision:&nbsp;<a id="app_series_revision" target="_blank" class="app-data"></a></div>
                 <div style="width:140px;" class="app-control-element app-control-small-element">Date:<span id="app_series_formatted_date_run" class="app-data"></span></div>
                 <div style="width:85px;" class="app-control-element app-control-small-element">Avg:<span id="app_series_avg" class="app-data"></span></div>
+                <div style="width:85px;" class="app-control-element app-control-small-element">Med:<span id="app_series_median" class="app-data"></span></div>
                 <div style="width:80px;" class="app-control-element app-control-small-element">Min:<span id="app_series_min" class="app-data"></span></div>
                 <div style="width:80px;" class="app-control-element app-control-small-element">Max:<span id="app_series_max" class="app-data"></span></div>
                 <div style="width:80px;" class="app-control-element app-control-small-element">Std:<span id="app_series_std" class="app-data"></span></div>
