add median to replicate display

--- a/datazilla/webapp/templates/apps.summary.html
+++ b/datazilla/webapp/templates/apps.summary.html
@@ -118,6 +118,7 @@
             <div id="app_replicate_chart" style="width:605px; height:400px; margin-top:30px; margin-left:35px;"></div>
             <div class="ui-widget ui-widget-header ui-corner-all app-detail-graph-container app-replicate-graph-detail" style="width:300px; top:35px; left:648px;">
                 <div class="app-control-element app-control-small-element">Avg:<span id="app_replicate_avg" class="app-data"></span></div>
+                <div class="app-control-element app-control-small-element">Med:<span id="app_replicate_median" class="app-data"></span></div>
                 <div class="app-control-element app-control-small-element">Min:<span id="app_replicate_min" class="app-data"></span></div>
                 <div class="app-control-element app-control-small-element">Max:<span id="app_replicate_max" class="app-data"></span></div>
                 <div class="app-control-element app-control-small-element">Std:<span id="app_replicate_std" class="app-data"></span></div>
