--- a/datazilla/webapp/templates/homepage.html
+++ b/datazilla/webapp/templates/homepage.html
@@ -84,7 +84,7 @@
                 </div>
                 <div id="hp_platform_menu" class="ui-corner-bottom"></div>
                 <div style="margin-top:5px;" class="ui-widget ui-widget-header ui-corner-top hp-list-controls">
-                    <div style="padding:5px;">Browse By Test </div>
+                    <div style="padding:5px;">Browse By Suite </div>
                 </div>
                 <div id="hp_test_menu" class="ui-corner-bottom">
                 </div>
