--- a/datazilla/webapp/templates/apps.summary.html
+++ b/datazilla/webapp/templates/apps.summary.html
@@ -84,7 +84,7 @@
    <div class="ui-widget ui-widget-header ui-corner-all app-graph-container">
         <div id="app_perf_wait" class="app-spinner"></div>
         <div id="app_perf_data_container" style="display:none;">
-            <div style="position:absolute; left:-68px; top:10px;" class="su-vertical-text">Average Run Time (milliseconds)</div>
+            <div id="app_perf_chart_vertical_text" style="position:absolute; left:-68px; top:10px;" class="su-vertical-text"><span class="app-y-axis-type">Average</span>&nbsp;<span class="app-perf-y-axis-label"></span></div>
             <div id="app_perf_no_chartdata" class="app-no-data-message" style="display:none;">No Data Found</div>
             <div id="app_perf_chart" style="width:905px; height:370px; margin-top:5px; margin-left:35px;"></div>
             <div id="app_perf_detail_container" class="ui-widget ui-widget-header ui-corner-all app-detail-graph-container">
@@ -113,7 +113,7 @@
    <div class="ui-widget ui-widget-header ui-corner-all app-graph-container-two">
         <div id="app_replicate_wait" style="height:380px;" class="app-spinner"></div>
         <div id="app_replicate_data_container" style="display:none;">
-            <div style="position:absolute; left:-45px; top:50px;" class="su-vertical-text">Run Time (milliseconds)</div>
+            <div id="app_replicate_chart_vertical_text" style="position:absolute; left:-45px; top:50px;" class="su-vertical-text"><span class="app-replicate-y-axis-label"></span></div>
             <div id="app_rep_no_chartdata" class="app-no-data-message" style="margin-left:300px; display:none;">No Data Found</div>
             <div id="app_replicate_chart" style="width:605px; height:400px; margin-top:30px; margin-left:35px;"></div>
             <div class="ui-widget ui-widget-header ui-corner-all app-detail-graph-container app-replicate-graph-detail" style="width:300px; top:35px; left:648px;">
@@ -125,7 +125,7 @@
             </div>
             <div class="ui-widget ui-widget-header ui-corner-all app-detail-graph-container app-replicate-graph-detail" style="width:300px; top:70px; left:648px;">
                 <div style="width:120px;" class="app-control-element app-control-small-element">Replicate:<span id="app_replicate_x" class="app-data"></span></div>
-                <div style="width:150px;" class="app-control-element app-control-small-element">Run Time:<span id="app_replicate_y" class="app-data"></span></div>
+                <div style="width:150px;" class="app-control-element app-control-small-element">Value:<span id="app_replicate_y" class="app-data"></span></div>
             </div>
             <div id="app_replicate_build_data" class="ui-widget ui-widget-header ui-corner-all app-detail-graph-container app-replicate-graph-detail" style="width:300px; height:305px; top:105px; left:648px; overflow-y:scroll; overflow-x:hidden;">
             </div>
